--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interior Crafts</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Real Concept</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Interior Crafts</a>
+      <a class="navbar-brand" href="index.html">The Real Concept</a>
       <div>
-        <a class="nav-link text-white" href="gallery.html">Projects</a>
-        <a class="nav-link text-white" href="achievements.html">Achievements</a>
+        <a class="nav-link text-white d-inline" href="gallery.html">Projects</a>
+        <a class="nav-link text-white d-inline" href="achievements.html">Achievements</a>
       </div>
     </div>
   </nav>
+
   <header class="text-center p-5 bg-light">
-    <h1>Welcome to Interior Crafts</h1>
+    <h1>Welcome to The Real Concept</h1>
     <p>Creative & Elegant Interior Design Solutions</p>
   </header>
-  <footer class="text-center p-3 bg-dark text-white">&copy; 2025 Interior Crafts</footer>
+
+  <footer class="text-center p-3 bg-dark text-white">
+    &copy; 2025 The Real Concept
+  </footer>
 </body>
 </html>
