--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - Interior Crafts</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Projects - The Real Concept</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script defer src="projectData.js"></script>
 </head>
 <body>
@@ -12,6 +12,7 @@
     <h1 class="mb-4">Project Gallery</h1>
     <div id="projects"></div>
   </div>
+
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const projectsDiv = document.getElementById("projects");
@@ -24,7 +25,7 @@
           const col = document.createElement("div");
           col.className = "col-md-4 mb-3";
           if (file.endsWith(".mp4")) {
-            col.innerHTML = `<video src="${file}" controls class="w-100"></video>`;
+            col.innerHTML = `<video src="${file}" controls class="w-100 rounded"></video>`;
           } else {
             col.innerHTML = `<img src="${file}" class="img-fluid rounded" />`;
           }
