--- a/achievements.html
+++ b/achievements.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Achievements - Interior Crafts</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Achievements - The Real Concept</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
   <div class="container py-5">
     <h1 class="mb-4">Achievements</h1>
     <div class="row">
       <div class="col-md-4">
-        <img src="images/achievements/award1.jpg" class="img-fluid rounded mb-2" />
+        <img src="images/achievements/award1.jpg" class="img-fluid rounded mb-2" alt="Award 1" />
         <p>Awarded Best Interior Designer 2024</p>
       </div>
       <div class="col-md-4">
-        <img src="images/achievements/expo.jpg" class="img-fluid rounded mb-2" />
+        <img src="images/achievements/expo.jpg" class="img-fluid rounded mb-2" alt="Expo" />
         <p>Featured at Interior Expo 2023</p>
       </div>
     </div>
