--- a/index.html
+++ b/index.html
@@ -5,25 +5,141 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Real Concept</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    section {
+      padding: 60px 15px;
+    }
+    .hero-image {
+      background: url('images/hero.jpg') center center/cover no-repeat;
+      height: 60vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-shadow: 0 0 10px black;
+    }
+    .bottom-menu {
+      background-color: #f8f9fa;
+      padding: 30px 0;
+    }
+    .bottom-menu a {
+      margin: 0 15px;
+      font-weight: 600;
+      font-size: 1.1rem;
+      text-decoration: none;
+      color: #007bff;
+    }
+    .bottom-menu a:hover {
+      text-decoration: underline;
+      color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">The Real Concept</a>
-      <div>
-        <a class="nav-link text-white d-inline" href="gallery.html">Projects</a>
-        <a class="nav-link text-white d-inline" href="achievements.html">Achievements</a>
-      </div>
+
+  <!-- Hero Section -->
+  <section id="home" class="hero-image text-center">
+    <div>
+      <h1>The Real Concept</h1>
+      <p class="lead">Creative & Elegant Interior Design Solutions</p>
     </div>
-  </nav>
+  </section>
 
-  <header class="text-center p-5 bg-light">
-    <h1>Welcome to The Real Concept</h1>
-    <p>Creative & Elegant Interior Design Solutions</p>
-  </header>
+  <!-- Introduction -->
+  <section id="intro" class="container text-center">
+    <h2>Welcome to The Real Concept</h2>
+    <p>We bring your dream spaces to life with unique and stylish interior design. Explore our services and projects below!</p>
+  </section>
 
-  <footer class="text-center p-3 bg-dark text-white">
+  <!-- Bottom Menu Navigation -->
+  <section class="bottom-menu text-center">
+    <a href="#about">About Us</a>
+    <a href="#services">Services</a>
+    <a href="#projects">Projects</a>
+    <a href="#achievements">Achievements</a>
+    <a href="#contact">Contact</a>
+  </section>
+
+  <!-- About Us Section -->
+  <section id="about" class="container">
+    <h2>About Us</h2>
+    <p>The Real Concept is a passionate team dedicated to crafting beautiful interiors that reflect your style and personality. Our story began with a vision to transform spaces into living art.</p>
+    <h3>Meet the Team</h3>
+    <ul>
+      <li><strong>Jane Doe</strong> - Founder & Lead Designer</li>
+      <li><strong>John Smith</strong> - Project Manager</li>
+      <li><strong>Emily Davis</strong> - Interior Architect</li>
+    </ul>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="container">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Residential Interior Design</li>
+      <li>Commercial Space Planning</li>
+      <li>Custom Furniture Design</li>
+      <li>Lighting & Decor Consultation</li>
+      <li>Renovation & Remodeling</li>
+    </ul>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="container">
+    <h2>Projects</h2>
+    <p>Explore our recent interior design projects showcasing creativity and craftsmanship.</p>
+    <!-- You can embed project gallery here or link to gallery.html -->
+    <a href="gallery.html" class="btn btn-primary">View Full Gallery</a>
+  </section>
+
+  <!-- Achievements Section -->
+  <section id="achievements" class="container">
+    <h2>Achievements</h2>
+    <p>We are proud of our milestones and recognitions that reflect our commitment to excellence.</p>
+    <!-- Brief achievements summary -->
+    <ul>
+      <li>Best Interior Designer Award 2024</li>
+      <li>Featured at Interior Expo 2023</li>
+    </ul>
+    <a href="achievements.html" class="btn btn-primary">See More Achievements</a>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="container">
+    <h2>Contact Us</h2>
+    <p>You can reach us for consultations, quotes, or questions.</p>
+    <ul>
+      <li>Email: contact@therealconcept.com</li>
+      <li>Phone: +1 234 567 8900</li>
+      <li>Address: 123 Design Street, City, Country</li>
+    </ul>
+
+    <h3>Send a Message</h3>
+    <form>
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" id="name" class="form-control" placeholder="Your name" required />
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" placeholder="Your email" required />
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea id="message" class="form-control" rows="4" placeholder="Your message" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Send</button>
+    </form>
+  </section>
+
+  <footer class="text-center p-3 bg-dark text-white mt-5">
     &copy; 2025 The Real Concept
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
