--- a/index.html
+++ b/index.html
@@ -2,144 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Real Concept</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-    section {
-      padding: 60px 15px;
-    }
-    .hero-image {
-      background: url('images/hero.jpg') center center/cover no-repeat;
-      height: 60vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-shadow: 0 0 10px black;
-    }
-    .bottom-menu {
-      background-color: #f8f9fa;
-      padding: 30px 0;
-    }
-    .bottom-menu a {
-      margin: 0 15px;
-      font-weight: 600;
-      font-size: 1.1rem;
-      text-decoration: none;
-      color: #007bff;
-    }
-    .bottom-menu a:hover {
-      text-decoration: underline;
-      color: #0056b3;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
 </head>
 <body>
 
-  <!-- Hero Section -->
-  <section id="home" class="hero-image text-center">
-    <div>
-      <h1>The Real Concept</h1>
-      <p class="lead">Creative & Elegant Interior Design Solutions</p>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#home">The Real Concept</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
     </div>
-  </section>
+  </div>
+</nav>
 
-  <!-- Introduction -->
-  <section id="intro" class="container text-center">
-    <h2>Welcome to The Real Concept</h2>
-    <p>We bring your dream spaces to life with unique and stylish interior design. Explore our services and projects below!</p>
-  </section>
+<!-- Hero Section -->
+<section id="home" class="hero-image d-flex align-items-center justify-content-center text-white">
+  <div class="text-center">
+    <h1 class="display-4">The Real Concept</h1>
+    <p class="lead">Creative & Elegant Interior Design Solutions</p>
+  </div>
+</section>
 
-  <!-- Bottom Menu Navigation -->
-  <section class="bottom-menu text-center">
-    <a href="#about">About Us</a>
-    <a href="#services">Services</a>
-    <a href="#projects">Projects</a>
-    <a href="#achievements">Achievements</a>
-    <a href="#contact">Contact</a>
-  </section>
+<!-- About -->
+<section id="about" class="container py-5">
+  <h2>About Us</h2>
+  <p>We are a passionate team dedicated to turning your space into a masterpiece. Our journey started with a vision to blend aesthetics and functionality.</p>
+</section>
 
-  <!-- About Us Section -->
-  <section id="about" class="container">
-    <h2>About Us</h2>
-    <p>The Real Concept is a passionate team dedicated to crafting beautiful interiors that reflect your style and personality. Our story began with a vision to transform spaces into living art.</p>
-    <h3>Meet the Team</h3>
-    <ul>
-      <li><strong>Jane Doe</strong> - Founder & Lead Designer</li>
-      <li><strong>John Smith</strong> - Project Manager</li>
-      <li><strong>Emily Davis</strong> - Interior Architect</li>
-    </ul>
-  </section>
+<!-- Services -->
+<section id="services" class="container py-5">
+  <h2>Our Services</h2>
+  <div class="row">
+    <div class="col-md-4"><h4>Residential Design</h4><p>Elegant homes tailored to your style.</p></div>
+    <div class="col-md-4"><h4>Commercial Design</h4><p>Professional workspaces that inspire productivity.</p></div>
+    <div class="col-md-4"><h4>Custom Furniture</h4><p>Furniture that speaks your language.</p></div>
+  </div>
+</section>
 
-  <!-- Services Section -->
-  <section id="services" class="container">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Residential Interior Design</li>
-      <li>Commercial Space Planning</li>
-      <li>Custom Furniture Design</li>
-      <li>Lighting & Decor Consultation</li>
-      <li>Renovation & Remodeling</li>
-    </ul>
-  </section>
+<!-- Projects -->
+<section id="projects" class="container py-5">
+  <h2>Projects</h2>
+  <div class="row">
+    <!-- Auto-insert manually by adding folders/images -->
+    <div class="col-md-6">
+      <h5>Project 1</h5>
+      <img src="projects/Project1/img1.jpg" class="img-fluid mb-2" />
+      <video src="projects/Project1/video1.mp4" class="w-100" controls></video>
+    </div>
+    <div class="col-md-6">
+      <h5>Project 2</h5>
+      <img src="projects/Project2/img1.jpg" class="img-fluid mb-2" />
+      <video src="projects/Project2/video1.mp4" class="w-100" controls></video>
+    </div>
+  </div>
+</section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="container">
-    <h2>Projects</h2>
-    <p>Explore our recent interior design projects showcasing creativity and craftsmanship.</p>
-    <!-- You can embed project gallery here or link to gallery.html -->
-    <a href="gallery.html" class="btn btn-primary">View Full Gallery</a>
-  </section>
+<!-- Achievements -->
+<section id="achievements" class="container py-5">
+  <h2>Achievements</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <img src="achievements/award1.jpg" class="img-fluid mb-2" />
+      <p>Best Design Award 2023</p>
+    </div>
+    <div class="col-md-4">
+      <img src="achievements/award2.jpg" class="img-fluid mb-2" />
+      <p>Client Choice Award</p>
+    </div>
+  </div>
+</section>
 
-  <!-- Achievements Section -->
-  <section id="achievements" class="container">
-    <h2>Achievements</h2>
-    <p>We are proud of our milestones and recognitions that reflect our commitment to excellence.</p>
-    <!-- Brief achievements summary -->
-    <ul>
-      <li>Best Interior Designer Award 2024</li>
-      <li>Featured at Interior Expo 2023</li>
-    </ul>
-    <a href="achievements.html" class="btn btn-primary">See More Achievements</a>
-  </section>
+<!-- Contact -->
+<section id="contact" class="container py-5">
+  <h2>Contact Us</h2>
+  <p>Email: contact@therealconcept.com</p>
+  <p>Phone: +91-9876543210</p>
+</section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="container">
-    <h2>Contact Us</h2>
-    <p>You can reach us for consultations, quotes, or questions.</p>
-    <ul>
-      <li>Email: contact@therealconcept.com</li>
-      <li>Phone: +1 234 567 8900</li>
-      <li>Address: 123 Design Street, City, Country</li>
-    </ul>
-
-    <h3>Send a Message</h3>
-    <form>
-      <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" id="name" class="form-control" placeholder="Your name" required />
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" id="email" class="form-control" placeholder="Your email" required />
-      </div>
-      <div class="mb-3">
-        <label for="message" class="form-label">Message</label>
-        <textarea id="message" class="form-control" rows="4" placeholder="Your message" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Send</button>
-    </form>
-  </section>
-
-  <footer class="text-center p-3 bg-dark text-white mt-5">
-    &copy; 2025 The Real Concept
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
