--- a/index.html
+++ b/index.html
@@ -2,96 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Real Concept</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="style.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Real Concept - Interior Design</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="70">
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#home">The Real Concept</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="navbar">
+    <div class="container">
+      <a class="navbar-brand" href="#">The Real Concept</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navContent" aria-controls="navContent"
+              aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <header id="home" class="hero-section d-flex align-items-center">
+    <div class="container text-center text-white">
+      <h1 class="display-4">Welcome to The Real Concept</h1>
+      <p class="lead">Transforming spaces with elegant interior design</p>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="py-5 bg-light">
+    <div class="container">
+      <h2>About Us</h2>
+      <p>We are The Real Concept, an interior design firm committed to creating beautiful and functional spaces.</p>
+    </div>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="py-5">
+    <div class="container">
+      <h2>Our Services</h2>
+      <ul>
+        <li>Residential Interior Design</li>
+        <li>Commercial Space Planning</li>
+        <li>Custom Furniture Design</li>
+        <li>Project Consultation</li>
       </ul>
     </div>
-  </div>
-</nav>
+  </section>
 
-<!-- Hero Section -->
-<section id="home" class="hero-image d-flex align-items-center justify-content-center text-white">
-  <div class="text-center">
-    <h1 class="display-4">The Real Concept</h1>
-    <p class="lead">Creative & Elegant Interior Design Solutions</p>
-  </div>
-</section>
-
-<!-- About -->
-<section id="about" class="container py-5">
-  <h2>About Us</h2>
-  <p>We are a passionate team dedicated to turning your space into a masterpiece. Our journey started with a vision to blend aesthetics and functionality.</p>
-</section>
-
-<!-- Services -->
-<section id="services" class="container py-5">
-  <h2>Our Services</h2>
-  <div class="row">
-    <div class="col-md-4"><h4>Residential Design</h4><p>Elegant homes tailored to your style.</p></div>
-    <div class="col-md-4"><h4>Commercial Design</h4><p>Professional workspaces that inspire productivity.</p></div>
-    <div class="col-md-4"><h4>Custom Furniture</h4><p>Furniture that speaks your language.</p></div>
-  </div>
-</section>
-
-<!-- Projects -->
-<section id="projects" class="container py-5">
-  <h2>Projects</h2>
-  <div class="row">
-    <!-- Auto-insert manually by adding folders/images -->
-    <div class="col-md-6">
-      <h5>Project 1</h5>
-      <img src="projects/Project1/img1.jpg" class="img-fluid mb-2" />
-      <video src="projects/Project1/video1.mp4" class="w-100" controls></video>
+  <!-- Projects Section -->
+  <section id="projects" class="py-5 bg-light">
+    <div class="container">
+      <h2>Our Projects</h2>
+      <div id="projects-container" class="mt-4">
+        <!-- Projects will be dynamically loaded here -->
+      </div>
     </div>
-    <div class="col-md-6">
-      <h5>Project 2</h5>
-      <img src="projects/Project2/img1.jpg" class="img-fluid mb-2" />
-      <video src="projects/Project2/video1.mp4" class="w-100" controls></video>
-    </div>
-  </div>
-</section>
+  </section>
 
-<!-- Achievements -->
-<section id="achievements" class="container py-5">
-  <h2>Achievements</h2>
-  <div class="row">
-    <div class="col-md-4">
-      <img src="achievements/award1.jpg" class="img-fluid mb-2" />
-      <p>Best Design Award 2023</p>
+  <!-- Contact Section -->
+  <section id="contact" class="py-5">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Email: <a href="mailto:therealconcept@example.com">therealconcept@example.com</a></p>
+      <p>Phone: +91-9876543210</p>
     </div>
-    <div class="col-md-4">
-      <img src="achievements/award2.jpg" class="img-fluid mb-2" />
-      <p>Client Choice Award</p>
-    </div>
-  </div>
-</section>
+  </section>
 
-<!-- Contact -->
-<section id="contact" class="container py-5">
-  <h2>Contact Us</h2>
-  <p>Email: contact@therealconcept.com</p>
-  <p>Phone: +91-9876543210</p>
-</section>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS and Custom JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
