--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section class="hero-section" id="home">
     <div class="container text-center text-white">
       <h1>Welcome to The Real Concept</h1>
-      <p>Transforming spaces into timeless masterpieces</p>
+      <p>We Care For Your Dreams</p>
     </div>
   </section>
 
