--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
         <img src="images/logo.jpg" alt="Logo" />
-        Your Company Name
+        The Real Concept
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
   <!-- Hero Section -->
   <section class="hero-section">
     <div class="container">
-      <h1>We Design Your Dreams</h1>
+      <h1>We Care For Your Dreams...</h1>
       <p>Stylish Interiors | Affordable Luxury | Customized Solutions</p>
     </div>
   </section>
