--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <img src="images/logo.jpg" alt="Logo" />
         The Real Concept
       </a>
+      <a class="navbar-brand" href="#">
+        <img src="images/logo.png" alt="Logo">
+        <img src="images/company_name.jpg" alt="Company Name" class="company-name-img">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
