--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Real Concept</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Real Concept | Interior Design</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@900&display=swap" rel="stylesheet" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-
   <!-- Navbar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="images/logo.jpg" alt="Logo" class="me-2" />
-        <span>The Real Concept</span>
+      <a class="navbar-brand" href="#">
+        <img src="images/logo.jpg" alt="Logo" />
+        The Real Concept
       </a>
-      
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
@@ -35,107 +39,85 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero-section text-center text-white">
+  <section class="hero-section">
     <div class="container">
-      <h1 class="display-4">We Care For Your Dreams...</h1>
-      <p class="lead">Stylish Interiors | Affordable Luxury | Customized Solutions</p>
-      <a href="#contact" class="btn btn-outline-light mt-3">Let's Connect</a>
+      <h1>We Care For Your Dreams...</h1>
+      <p>Stylish Interiors | Affordable Luxury | Customized Solutions</p>
     </div>
   </section>
 
   <!-- About Section -->
-  <section id="about" class="py-5">
-    <div class="container">
-      <h2 class="section-title">About Us</h2>
-      <p class="text-muted">We are a passionate interior design team delivering stunning home and office makeovers that suit your style and budget.</p>
+  <section id="about" class="container mt-5">
+    <h2>About Us</h2>
 
-      <div class="about-subsection mt-4">
-        <h3>Our Mission</h3>
-        <p>To deliver high-quality, innovative design solutions that reflect your personality.</p>
-      </div>
-      <div class="about-subsection mt-4">
-        <h3>Our Vision</h3>
-        <p>To be a leading interior design brand offering creative and sustainable spaces.</p>
-      </div>
-      <div class="about-subsection mt-4">
-        <h3>Our Values</h3>
-        <p>Creativity, transparency, customer satisfaction, and timely delivery.</p>
-      </div>
+    <div class="about-subsection">
+      <h3>Mission</h3>
+      <p>To create inspiring, elegant, and functional spaces tailored perfectly for our clients.</p>
+    </div>
+
+    <div class="about-subsection">
+      <h3>Vision</h3>
+      <p>To be the leading interior design firm known for innovation, quality, and client satisfaction.</p>
+    </div>
+
+    <div class="about-subsection">
+      <h3>Our Values</h3>
+      <p>Integrity, Creativity, Excellence, and Customer-Centric Approach.</p>
     </div>
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="section-title">Our Projects</h2>
-      <div class="row g-4 mt-4">
-        <div class="col-md-6">
-          <div class="card project-card">
-            <img src="projects/project1/image1.jpg" class="card-img-top" alt="Living Room">
-            <div class="card-body">
-              <h5 class="card-title">Modern Living Room</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card project-card">
-            <video class="card-img-top" controls>
-              <source src="projects/project2/video1.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-            <div class="card-body">
-              <h5 class="card-title">3BHK Walkthrough</h5>
-            </div>
-          </div>
-        </div>
+  <section id="projects" class="container mt-5">
+    <h2>Projects</h2>
+    <div id="projects-container">
+      <!-- Example project -->
+      <div class="project">
+        <h4>Living Room Makeover</h4>
+        <img src="images/projects/living-room.jpg" alt="Living Room" />
       </div>
+      <div class="project">
+        <h4>Modern Kitchen Design</h4>
+        <img src="images/projects/kitchen.jpg" alt="Kitchen" />
+      </div>
+      <!-- Add more projects here -->
     </div>
   </section>
 
   <!-- Achievements Section -->
-  <section id="achievements" class="py-5">
-    <div class="container">
-      <h2 class="section-title">Achievements</h2>
-      <div class="row g-4 mt-4">
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 text-center">
-            <img src="achievements/award1.jpg" class="card-img-top" alt="Award 1">
-            <div class="card-body">
-              <p class="card-text">Best Designer Award 2023</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card h-100 text-center">
-            <img src="achievements/award2.jpg" class="card-img-top" alt="Award 2">
-            <div class="card-body">
-              <p class="card-text">Top 10 Designers - India Today</p>
-            </div>
-          </div>
-        </div>
+  <section id="achievements" class="container mt-5">
+    <h2>Achievements</h2>
+    <div class="row">
+      <div class="col-md-4 text-center">
+        <img src="images/achievements/award1.jpg" alt="Award 1" />
+        <p>Best Interior Design Award 2023</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/achievements/award2.jpg" alt="Award 2" />
+        <p>Excellence in Innovation 2024</p>
+      </div>
+      <div class="col-md-4 text-center">
+        <img src="images/achievements/award3.jpg" alt="Award 3" />
+        <p>Customer Choice Award 2024</p>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="section-title">Contact Us</h2>
-      <div class="text-left mt-4">
-        <p><strong>Phone:</strong> +91-9876543210</p>
-        <p><strong>Email:</strong> <a href="mailto:info@yourcompany.com">info@yourcompany.com</a></p>
-        <p><strong>Location:</strong> Mumbai, Maharashtra</p>
-      </div>
-    </div>
+  <section id="contact" class="container mt-5">
+    <h2>Contact Us</h2>
+    <p class="text-left">
+      Phone: +91 12345 67890<br />
+      Email: <a href="mailto:contact@therealconcept.com">contact@therealconcept.com</a><br />
+      Address: 123 Interior St, Design City, Country
+    </p>
   </section>
 
   <!-- Footer -->
-  <footer class="footer py-4 text-center text-white">
-    <div class="container">
-      &copy; 2025 The Real Concept. All rights reserved.
-    </div>
+  <footer>
+    &copy; 2025 The Real Concept. All rights reserved.
   </footer>
 
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
