--- a/index.html
+++ b/index.html
@@ -38,13 +38,32 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <section class="hero-section">
-    <div class="container">
-      <h1>We Care For Your Dreams...</h1>
-      <p>Stylish Interiors | Affordable Luxury | Customized Solutions</p>
+  <!-- Hero Carousel Section -->
+  <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel" data-bs-ride="carousel" data-bs-interval="3000">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/hero.jpg" class="d-block w-100" alt="Hero 1" />
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="display-4">We Care For Your Dreams...</h1>
+          <p class="lead">Stylish Interiors | Affordable Luxury | Customized Solutions</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/hero1.jpg" class="d-block w-100" alt="Hero 2" />
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="display-4">Design that Defines You</h1>
+          <p class="lead">From Concept to Creation</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/hero2.jpg" class="d-block w-100" alt="Hero 3" />
+        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+          <h1 class="display-4">Spaces Reimagined</h1>
+          <p class="lead">Elegant. Functional. Yours.</p>
+        </div>
+      </div>
     </div>
-  </section>
+  </div>
 
   <!-- About Section -->
   <section id="about" class="container mt-5">
@@ -79,7 +98,6 @@
         <h4>Modern Kitchen Design</h4>
         <img src="images/projects/kitchen.jpg" alt="Kitchen" />
       </div>
-      <!-- Add more projects here -->
     </div>
   </section>
 
