--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
             <a class="navbar-brand d-flex align-items-center" href="#">
               <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
-              The Real Concept
+              The Real Concept-dev
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
           <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
             <a class="navbar-brand d-flex align-items-center" href="#">
               <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
-              The Real Concept
+              The Real Concept-dev
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
           <nav class="navbar navbar-expand-lg navbar-dark hero-navbar w-100 px-4">
             <a class="navbar-brand d-flex align-items-center" href="#">
               <img src="images/logo.jpg" alt="Logo" style="height: 40px; margin-right: 10px;" />
-              The Real Concept
+              The Real Concept-dev
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
