--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </nav>
 
   <!-- Hero Carousel Section -->
-  <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel" data-bs-ride="carousel" data-bs-interval="3000">
+  <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/hero.jpg" class="d-block w-100" alt="Hero 1" />
@@ -61,10 +61,10 @@
     </div>
 
     <!-- Carousel controls -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" id="prevBtn" aria-label="Previous">
+    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" aria-label="Previous">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" id="nextBtn" aria-label="Next">
+    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" aria-label="Next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
     </button>
   </div>
@@ -135,9 +135,7 @@
     &copy; 2025 The Real Concept. All rights reserved.
   </footer>
 
-  <!-- Bootstrap JS -->
+  <!-- Bootstrap JS Bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Hero JS -->
-  <script src="scripts/hero.js"></script>
 </body>
 </html>
