--- a/index.html
+++ b/index.html
@@ -137,5 +137,23 @@
 
   <!-- Bootstrap JS Bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const navbar = document.querySelector('.hero-navbar');
+    const hero = document.querySelector('.hero-carousel');
+
+    function onScroll() {
+      if (window.scrollY > hero.offsetHeight) {
+        navbar.classList.add('scrolled');
+      } else {
+        navbar.classList.remove('scrolled');
+      }
+    }
+
+    window.addEventListener('scroll', onScroll);
+    onScroll(); // Run once on page load in case user reloads mid-scroll
+  });
+  </script>
+
 </body>
 </html>
