--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Add this inside your style.css or inline here for demonstration */
+
+    .hero-navbar {
+      background-color: transparent;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .hero-navbar.scrolled {
+      background-color: rgba(0, 0, 0, 0.9); /* solid dark background */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+  </style>
 </head>
 <body>
   <!-- Single Fixed Navbar -->
@@ -139,7 +152,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
   document.addEventListener('DOMContentLoaded', () => {
-    const navbar = document.querySelector('.hero-navbar');
+    const navbar = document.querySelector('.hero-navbar');  // Use hero-navbar here
     const hero = document.querySelector('.hero-carousel');
 
     function onScroll() {
@@ -151,9 +164,8 @@
     }
 
     window.addEventListener('scroll', onScroll);
-    onScroll(); // Run once on page load in case user reloads mid-scroll
+    onScroll();
   });
   </script>
-
 </body>
 </html>
