--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     }
 
     .hero-navbar.scrolled {
-      background-color: rgba(0, 0, 0, 0.9); /* solid dark background */
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      background-color: #ffffff; /* solid dark background */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
     }
   </style>
 </head>
