--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       background-color: #ffffff; /* solid dark background */
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
     }
+    .hero-navbar {
+      height: 70px; /* Set desired height */
+      display: flex;
+      align-items: center;
+    }
+
   </style>
 </head>
 <body>
