--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#What We Do">What We Do</a></li>
         <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
@@ -105,17 +105,17 @@
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="container mt-5">
-    <h2>Projects</h2>
-    <div id="projects-container">
+  <!-- What We Do Section -->
+  <section id="What We Do" class="container mt-5">
+    <h2>What We Do</h2>
+    <div id="What We Do-container">
       <div class="project">
         <h4>Living Room Makeover</h4>
-        <img src="images/projects/living-room.jpg" alt="Living Room" />
+        <img src="images/What We Do/living-room.jpg" alt="Living Room" />
       </div>
       <div class="project">
         <h4>Modern Kitchen Design</h4>
-        <img src="images/projects/kitchen.jpg" alt="Kitchen" />
+        <img src="images/What We Do/kitchen.jpg" alt="Kitchen" />
       </div>
     </div>
   </section>
