--- a/index.html
+++ b/index.html
@@ -145,19 +145,19 @@
     <div id="clientsCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-inner text-center">
         <div class="carousel-item active">
-          <img src="images/clients/Client1.png" class="client-logo" alt="KUNDAN SPACES" />
+          <img src="images/clients/Client1.jpg" class="client-logo" alt="KUNDAN SPACES" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/Client2.png" class="client-logo" alt="Client 2" />
+          <img src="images/clients/Client2.jpg" class="client-logo" alt="Client 2" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/Client3.png" class="client-logo" alt="Client 3" />
+          <img src="images/clients/Client3.jpg" class="client-logo" alt="Client 3" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/Client4.png" class="client-logo" alt="Client 4" />
+          <img src="images/clients/Client4.jpg" class="client-logo" alt="Client 4" />
         </div>
         <div class="carousel-item">
-          <img src="images/clients/Client5.png" class="client-logo" alt="Client 5" />
+          <img src="images/clients/Client5.jpg" class="client-logo" alt="Client 5" />
         </div>
         <div class="carousel-item">
           <img src="images/clients/Client6.png" class="client-logo" alt="Client 6" />
